# Classical-Modern

./: README.md  README_pipeline.md  pyproject.toml  requirements.txt
outputs_sample_lowcost/cache/: translation_cache.sqlite3
outputs_sample_lowcost/filtered/: high_quality_parallel.csv  high_quality_parallel.jsonl
outputs_sample_lowcost/raw/: translations.jsonl
outputs_sample_lowcost/scored/: translations_scored.jsonl
outputs_smoke_live/cache/: translation_cache.sqlite3
outputs_smoke_live/filtered/: high_quality_parallel.csv  high_quality_parallel.jsonl
outputs_smoke_live/raw/: translations.jsonl
outputs_smoke_live/scored/: translations_scored.jsonl
src/cm_en_pipeline/: __init__.py  cli.py  config.py  dataset.py  filtering.py  io_utils.py  llm_client.py  metrics.py  pipeline.py  prompts.py  translate.py
tests/: test_dataset.py  test_llm_client.py  test_metrics_and_filtering.py
