[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cm-en-pipeline"
version = "0.1.0"
description = "Production-minded Classical-Modern to English dataset construction pipeline."
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
